Fix the button alignment

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -47,13 +47,14 @@
 }
 
 .location-button-container {
-  width: 90%;
-  height: fit-content;
-  padding: 32px;
-  margin: 32px;
+  padding: 32px 0px;
+  max-width: 800px;
+  width: 80vw;
+  margin: 0 auto;
   display: flex;
+  flex-direction: row;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 
 .owned-button {
@@ -80,8 +81,15 @@ a {
   color: black;
 }
 
+
 @media (max-width: 450px) {
   .location-button-container {
     flex: 1 1 auto;
+    margin: 0 auto;
+  }
+  .divider{
+    width: 32px;
+    height: auto;
+    display: inline-block;
   }
 }
